Add fluentbit_install_enabled and fluentbit_configure_enabled default variables

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
+fluentbit_install_enabled: true
+fluentbit_configure_enabled: false
+
 # type: dict
 # descr: package repository details
 fluentbit_repository:
